--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <header>
-        Below are the links to the different pages that i have built for this class
+        Below are the links to the different pages that i have built for this class, they don't have links back to this page so you'll have to navigate back here elsewhere
     </header>
+    <a href="mission_statement.html">BYUI Mission Statement copycat</a><br>
+    <a href="running.html">Running Assignment</a><br>
+    <a href="week1Ponder.html">week1Ponder</a>
 </body>
 </html>
