--- a/mission_statement.html
+++ b/mission_statement.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="CSS/mission_statement.css"/>
 </head>
 <body>
-    <div id="content">
+    <div class="content">
         <header>
             <h1 class="title">MISSION STATEMENT</h1>
-            <h2 class="subtitle">BRIGHAM YOUNG UNIVERSITY-IDAHO</h2>
+            <h3 class="subtitle">BRIGHAM YOUNG UNIVERSITY-IDAHO</h3>
         </header>
         <p class="body_p">Brigham Young University-Idaho was founded and is supported and guided by The Church of Jesus Christ of Latter-Day Saints. Its mission is to deveolop disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.</p>
         <hgroup class="mission_list">
@@ -23,7 +23,7 @@
             </ol>
         </hgroup>
         <footer>
-            <img class="logo" src="images/byui-logo_blue.jpg" alt="BYUI Logo">
+        <img class="logo" src="images/byui-logo_blue.jpg" alt="BYUI Logo">
         </footer>
     </div>
 </body>
