--- a/mission_statement.html
+++ b/mission_statement.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYUI Mission Statement</title>
+    <script src="./javascript/mission.js"></script>
     <link rel="stylesheet" href="CSS/mission_statement.css">
 </head>
 <body>
@@ -22,6 +23,10 @@
         </ol>
         <footer>
         <img class="logo" src="images/byui-logo_blue.jpg" alt="BYUI Logo">
+        <select name="Theme">
+            <option value="light">Light</option>
+            <option value="Dark">Dark</option>
+        </select>
         </footer>
     </div>
 </body>
