mission statement pt2

--- a/mission_statement.html
+++ b/mission_statement.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYUI Mission Statement</title>
-    <script src="./javascript/mission.js"></script>
     <link rel="stylesheet" href="CSS/mission_statement.css">
 </head>
 <body>
@@ -23,11 +22,13 @@
         </ol>
         <footer>
         <img class="logo" src="images/byui-logo_blue.jpg" alt="BYUI Logo">
-        <select name="Theme">
+        <select id="theme">
             <option value="light">Light</option>
-            <option value="Dark">Dark</option>
+            <option value="dark">Dark</option>
         </select>
         </footer>
     </div>
 </body>
+<script src="./javascript/mission.js"></script>
+
 </html>
