--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="mission_statement.html">BYUI Mission Statement copycat</a><br>
     <a href="running.html">Running Assignment</a><br>
     <a href="week1Ponder.html">week1Ponder</a>
+    <a href="coolpics/index.html">CoolPics</a>
 </body>
 </html>
