--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -16,15 +16,15 @@
         <a href="">About</a>
         <a href="">Contact</a>
     </header>
-    <button id="menuButton">Show/Hide Menu</button>
+    <button class="menuButton">Show/Hide Menu</button>
     <h3>Current Work</h3>
         <div class="gallery">
-            <img src="norris-sm.jpeg">
-            <img src="norris-sm.jpeg">
-            <img src="norris-sm.jpeg">
-            <img src="norris-sm.jpeg">
-            <img src="norris-sm.jpeg">
-            <img src="norris-sm.jpeg">
+            <img src="norris-sm.jpeg" alt="image">
+            <img src="norris-sm.jpeg" alt="image">
+            <img src="norris-sm.jpeg" alt="image">
+            <img src="norris-sm.jpeg" alt="image">
+            <img src="norris-sm.jpeg" alt="image">
+            <img src="norris-sm.jpeg" alt="image">    
         </div>
 
     <footer>
