--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./coolpics.css">
 </head>
 <body>
-    <header>
+    <header id="headerMenu" class="hidden">
         <h1>Cool Pics 📷</h1>
         <a href="../index.html">Home Navigation Page</a>
         <a href="">People</a>
