--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./coolpics.css">
 </head>
 <body>
-    <header id="headerMenu" class="hidden">
+    <header id="headerMenu">
         <h1>Cool Pics 📷</h1>
         <a href="../index.html">Home Navigation Page</a>
         <a href="">People</a>
@@ -16,7 +16,7 @@
         <a href="">About</a>
         <a href="">Contact</a>
     </header>
-    <button class="menuButton">Show/Hide Menu</button>
+    <button id="menuButton">Show/Hide Menu</button>
     <h3>Current Work</h3>
         <div class="gallery">
             <img src="norris-sm.jpeg" alt="image">
