completed cool pics

--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div class="viewer">
+    <div id="viewer" class="hidden">
         <button id="viewCloser">X</button>
         <img src="norris-full.jpeg" alt="large image">
     </div>
@@ -24,13 +24,13 @@
     </header>
     <button id="menuButton">Show/Hide Menu</button>
     <h3>Current Work</h3>
-        <div class="gallery">
-            <img src="norris-sm.jpeg" alt="image">
-            <img src="norris-sm.jpeg" alt="image">
-            <img src="norris-sm.jpeg" alt="image">
-            <img src="norris-sm.jpeg" alt="image">
-            <img src="norris-sm.jpeg" alt="image">
-            <img src="norris-sm.jpeg" alt="image">    
+        <div id="gallery" onclick="">
+            <img class="galleryImg" src="norris-sm.jpeg" alt="image">
+            <img class="galleryImg" src="norris-sm.jpeg" alt="image">
+            <img class="galleryImg" src="norris-sm.jpeg" alt="image">
+            <img class="galleryImg" src="norris-sm.jpeg" alt="image">
+            <img class="galleryImg" src="norris-sm.jpeg" alt="image">
+            <img class="galleryImg" src="norris-sm.jpeg" alt="image">    
         </div>
 
     <footer>
