--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="running.html">Running Assignment</a><br>
     <a href="week1Ponder.html">week1Ponder</a>
     <a href="coolpics/index.html">CoolPics</a>
+    <a href="blog/index.html">Book Blog</a>
 </body>
 </html>
