--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="week1Ponder.html">week1Ponder</a>
     <a href="coolpics/index.html">CoolPics</a>
     <a href="blog/index.html">Book Blog</a>
+    <a href="creditcard/index.html">Credit Card</a>
 </body>
 </html>
