--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <a href="coolpics/index.html">CoolPics</a>
     <a href="blog/index.html">Book Blog</a>
     <a href="creditcard/index.html">Credit Card</a>
+    <a href="register/index.html">Camp Registration</a>
 </body>
 </html>
