--- a/register/index.html
+++ b/register/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="register.css" />
-    <script src="register.js" defer></script>
+    <script src="register.js" type="module" defer></script>
   </head>
   <body>
     <div class="testbox">
@@ -54,6 +54,7 @@
               </select>
             </div>
           </section>
+          <div id="participantPlacer"></div>
           <button type="button" id="add">Add Participant</button>
         </fieldset>
 
