--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <a href="blog/index.html">Book Blog</a>
     <a href="creditcard/index.html">Credit Card</a>
     <a href="register/index.html">Camp Registration</a>
+    <a href="recipebook/index.html">Recipe Book</a>
 </body>
 </html>
