--- a/recipebook/index.html
+++ b/recipebook/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Book</title>
     <link rel="stylesheet" href="recipebook.css">
-    <script src="./javscript/main.js" type="module" defer></script>
+    <script src="./javscript/main.js" type="module"></script>
     <meta property="og:title" content="Page Title">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Page Description">
