--- a/recipebook/index.html
+++ b/recipebook/index.html
@@ -22,6 +22,7 @@
     <div id="searchBar">
         <input type="text" id="search" placeholder="Search for recipes...">
     </div>
+    <button id="searchButton" type="button">Search</button>
     <div id="recipePlacer"></div>
     <footer id="footer">
         <div class="social">
