--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <a href="creditcard/index.html">Credit Card</a>
     <a href="register/index.html">Camp Registration</a>
     <a href="recipebook/index.html">Recipe Book</a>
+    <a href="personalSite/index.html">Personal Site (Don't Eat Pete Game)`</a>
 </body>
 </html>
