--- a/personalSite/index.html
+++ b/personalSite/index.html
@@ -10,7 +10,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="game.html">Game</a>
-            <a href="sitePlan.html">Site Plan</a>
+            <a href="site-plan.html">Site Plan</a>
         </nav>
         <h1>Don't Eat Pete!</h1>
     </header>
