--- a/personalSite/game.html
+++ b/personalSite/game.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Don't Eat Pete! Game</title>
+    <script src="javascript/game.js" defer></script>
+    <link rel="stylesheet" href="css/gameBoard.css">
 </head>
 <body>
-    
+        <h1 id="title">Don't Eat Pete!<img id="logo" src="images/marshmallowLogo.png" alt="marshmallowLogo">
+        </h1>
+        <p>Click on a square to start the game!</p>
+    <div id="gameBoard">
+        <button class="square" id="square0" type="button">
+            <img class="squareImg" src="images/cheerio.png" alt="Game  Square">
+        </button>
+        <button class="square" id="square1" type="button">
+            <img class="squareImg" src="images/marshmallowLogo.png" alt="Game  Square">
+        </button>
+        <button class="square" id="square2" type="button">
+            <img class="squareImg"  src="images/cheerio.png" alt="Game Square">
+        </button>
+        <button class="square" id="square3" type="button">
+            <img class="squareImg" src="images/marshmallowLogo.png" alt="Game Square">
+        </button>
+        <button class="square" id="square4" type="button">
+            <img class="squareImg" src="images/cheerio.png" alt="Game  Square">
+        </button>
+        <button class="square" id="square5" type="button">
+            <img class="squareImg" src="images/cheerio.png" alt="Game Square">
+        </button>
+        <button class="square" id="square6" type="button">
+            <img class="squareImg" src="images/marshmallowLogo.png" alt="Game Square">
+        </button>
+        <button class="square" id="square7" type="button">
+            <img class="squareImg" src="images/marshmallowLogo.png" alt="Game Square">
+        </button>
+        <button class="square" id="square8" type="button">
+            <img class="squareImg" src="images/marshmallowLogo.png" alt="Game Square">
+        </button>
+    </div>
+    <button id="playAgain">Play Again</button> 
 </body>
 </html>
