--- a/personalSite/game.html
+++ b/personalSite/game.html
@@ -8,36 +8,36 @@
     <link rel="stylesheet" href="css/gameBoard.css">
 </head>
 <body>
-        <h1 id="title">Don't Eat Pete!<img id="logo" src="images/marshmallowLogo.png" alt="marshmallowLogo">
+        <h1 id="title">Don't Eat Pete!<img id="logo" src="images/marshmallowLogo.webp" alt="marshmallowLogo">
         </h1>
         <p>Click on a square to start the game!</p>
     <div id="gameBoard">
         <button class="square" id="square0" type="button">
-            <img class="squareImg" src="images/cheerio.png" alt="Game  Square">
+            <img class="squareImg" src="images/cheerio.webp" alt="Game  Square">
         </button>
         <button class="square" id="square1" type="button">
-            <img class="squareImg" src="images/marshmallowLogo.png" alt="Game  Square">
+            <img class="squareImg" src="images/marshmallowLogo.webp" alt="Game  Square">
         </button>
         <button class="square" id="square2" type="button">
-            <img class="squareImg"  src="images/cheerio.png" alt="Game Square">
+            <img class="squareImg"  src="images/cheerio.webp" alt="Game Square">
         </button>
         <button class="square" id="square3" type="button">
-            <img class="squareImg" src="images/marshmallowLogo.png" alt="Game Square">
+            <img class="squareImg" src="images/marshmallowLogo.webp" alt="Game Square">
         </button>
         <button class="square" id="square4" type="button">
-            <img class="squareImg" src="images/cheerio.png" alt="Game  Square">
+            <img class="squareImg" src="images/cheerio.webp" alt="Game  Square">
         </button>
         <button class="square" id="square5" type="button">
-            <img class="squareImg" src="images/cheerio.png" alt="Game Square">
+            <img class="squareImg" src="images/cheerio.webp" alt="Game Square">
         </button>
         <button class="square" id="square6" type="button">
-            <img class="squareImg" src="images/marshmallowLogo.png" alt="Game Square">
+            <img class="squareImg" src="images/marshmallowLogo.webp" alt="Game Square">
         </button>
         <button class="square" id="square7" type="button">
-            <img class="squareImg" src="images/marshmallowLogo.png" alt="Game Square">
+            <img class="squareImg" src="images/marshmallowLogo.webp" alt="Game Square">
         </button>
         <button class="square" id="square8" type="button">
-            <img class="squareImg" src="images/marshmallowLogo.png" alt="Game Square">
+            <img class="squareImg" src="images/marshmallowLogo.webp" alt="Game Square">
         </button>
     </div>
     <button id="playAgain">Play Again</button> 
