--- a/personalSite/game.html
+++ b/personalSite/game.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Don't Eat Pete! Game">
+    <meta name="keywords" content="Don't Eat Pete!, Game, Marshmallow, Cheerio">
+    <meta name="author" content="Braden Roenfeldt">
+    <link rel="icon" href="images/favicon-16x16.png" type="image/x-icon">
     <title>Don't Eat Pete! Game</title>
     <script src="javascript/game.js" defer></script>
     <link rel="stylesheet" href="css/gameBoard.css">
