--- a/personalSite/game.html
+++ b/personalSite/game.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="css/gameBoard.css">
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="game.html">Game</a>
+        <a href="site-plan.html">Site Plan</a>
+    </nav>
         <h1 id="title">Don't Eat Pete!<img id="logo" src="images/marshmallowLogo.webp" alt="marshmallowLogo">
         </h1>
         <p>Click on a square to start the game!</p>
