--- a/personalSite/index.html
+++ b/personalSite/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/mainpage.css">
     <title>Dont Eat Pete!</title>
 </head>
-<body>
-    <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="game.html">Game</a>
-            <a href="site-plan.html">Site Plan</a>
-        </nav>
-        <h1>Don't Eat Pete!</h1>
-    </header>
-    <h2>Objective</h2>
-    <p>Don't Eat Pete! is a simple game that is great for kids and adults alike. The objective of the game is to not be the one to eat Pete. Pete is a character that is placed on one of the squares on the game board. He his hidden underneath a piece of food on one of the squares. Try to eat all the food while leaving Pete to be the last one on the board.</p>
-    <h2>How to Play</h2>
-    <p>Click on a tile to eat that piece of food. If Pete is not underneath it then you will be able to click on another piece. If you pick the piece that Pete is underneath then it is game over.</p>
-    <h3><a href="game.html">Click Here To Play!</a></h3>
-
-</body>
+    <body>
+        <header>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="game.html">Game</a>
+                <a href="site-plan.html">Site Plan</a>
+            </nav>
+            <h1>Don't Eat Pete!</h1>
+        </header>
+        <h1>Objective</h1>
+        <p>Don't Eat Pete! is a simple game that is great for kids and adults alike. The objective of the game is to not be the one to eat Pete. Pete is a character that is placed on one of the squares on the game board. He his hidden underneath a piece of food on one of the squares. Try to eat all the food while leaving Pete to be the last one on the board.</p>
+        <h1>How to Play</h1>
+        <p>Click on a tile to eat that piece of food. If Pete is not underneath it then you will be able to click on another piece. If you pick the piece that Pete is underneath then it is game over.</p>
+        <h3><a href="game.html">Click Here To Play!</a></h3>
+    </body>
 </html>
