--- a/personalSite/game.html
+++ b/personalSite/game.html
@@ -17,9 +17,10 @@
         <a href="game.html">Game</a>
         <a href="site-plan.html">Site Plan</a>
     </nav>
-        <h1 id="title">Don't Eat Pete!<img id="logo" src="images/marshmallowLogo.webp" alt="marshmallowLogo">
-        </h1>
-        <p>Click on a square to start the game!</p>
+    <h1 id="title">Don't Eat Pete!
+        <img id="logo" src="images/marshmallowLogo.webp" alt="marshmallowLogo">
+    </h1>
+    <p>Click on a square to start the game!</p>
     <div id="gameBoard">
         <button class="square" id="square0" type="button">
             <img class="squareImg" src="images/cheerio.webp" alt="Game  Square">
