--- a/personalSite/site-plan.html
+++ b/personalSite/site-plan.html
@@ -21,7 +21,7 @@
     <h2>The Game page will hold the game board and the game itself. It will have a refresh button at the bottom so users can restart when they want. Using javascript clicked elements will disappear and be replaced. If the user clicks on a tile with Pete then a game over pop up will show and propmt the user to refresh the page. Each time the page is created Pete will be placed randomly inside a tile.</h2>
     <br>
     <h1>Logo</h1>
-    <img src="images/marshmallowLogo.png" alt="Logo">
+    <img src="images/marshmallowLogo.webp" alt="Logo">
     <br>
     <h1>Styling</h1>
     <h2>The site will use comic sans as the main font with moonflower as a backup font and Calibri if that fails.</h2>
