--- a/personalSite/game.html
+++ b/personalSite/game.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Braden Roenfeldt">
     <link rel="icon" href="images/favicon-16x16.png" type="image/x-icon">
     <title>Don't Eat Pete! Game</title>
-    <script src="javascript/game.js" defer></script>
-    <link rel="stylesheet" href="css/gameBoard.css">
+    <script src="game.js" defer></script>
+    <link rel="stylesheet" href="css/styling.css">
 </head>
 <body>
     <nav>
@@ -50,6 +50,7 @@
             <img class="squareImg" src="images/marshmallowLogo.webp" alt="Game Square">
         </button>
     </div>
-    <button id="playAgain">Play Again</button> 
+    <button id="restart">Restart</button> 
+    <img id="dep" src="images/dont eat pete.webp">
 </body>
 </html>
