--- a/personalSite/game.html
+++ b/personalSite/game.html
@@ -20,7 +20,7 @@
     <h1 id="title">Don't Eat Pete!
         <img id="logo" src="images/marshmallowLogo.webp" alt="marshmallowLogo">
     </h1>
-    <p>Click on a square to start the game!</p>
+    <p>Click on a square to start the game,<br>if you try to eat Pete its game over!</p>
     <div id="gameBoard">
         <button class="square" id="square0" type="button">
             <img class="squareImg" src="images/cheerio.webp" alt="Game  Square">
@@ -51,6 +51,6 @@
         </button>
     </div>
     <button id="restart">Restart</button> 
-    <img id="dep" src="images/dont eat pete.webp">
+    <img id="dep" src="images/dont_eat_pete.webp" alt="dont eat pete popup">
 </body>
 </html>
