--- a/personalSite/site-plan.html
+++ b/personalSite/site-plan.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/site-plan.css">
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="game.html">Game</a>
+        <a href="site-plan.html">Site Plan</a>
+    </nav>
     <h1>Site Plan</h1>
     <br>
     <h1>Audience</h1>
