--- a/personalSite/game.html
+++ b/personalSite/game.html
@@ -20,6 +20,7 @@
     <h1 id="title">Don't Eat Pete!
         <img id="logo" src="images/marshmallowLogo.webp" alt="marshmallowLogo">
     </h1>
+    <a id="backToHome" href="index.html">Click here for a refresher on how to play.</a>
     <p>Click on a square to start the game,<br>if you try to eat Pete its game over!</p>
     <div id="gameBoard">
         <button class="square" id="square0" type="button">
